--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ TELEGRAM_USER_ID=your_telegram_user_id
 # Project URL (looks like https://abc123.supabase.co)
 SUPABASE_URL=your_project_url
 
-# anon public key (starts with eyJ...)
-SUPABASE_ANON_KEY=your_anon_key
+# Publishable key (from Project Settings > API)
+SUPABASE_ANON_KEY=your_publishable_key
 
 # --- RECOMMENDED: Personalization ---
 
@@ -29,6 +29,14 @@ USER_NAME=Your Name
 # Your timezone (IANA format: America/New_York, Europe/Berlin, etc.)
 USER_TIMEZONE=UTC
 
+# --- RECOMMENDED: Co-Parenting ---
+
+# Co-parent's phone number or iMessage ID (e.g., +15551234567)
+COPARENT_HANDLE=+15551234567
+
+# Co-parent's display name (used in notifications)
+COPARENT_NAME=Co-parent
+
 # --- OPTIONAL: Paths ---
 
 # Claude CLI path (auto-detected if in PATH)
@@ -37,8 +45,8 @@ USER_TIMEZONE=UTC
 # Working directory for Claude (defaults to relay's own directory)
 # PROJECT_DIR=/path/to/your/project
 
-# Relay data directory (defaults to ~/.claude-relay)
-# RELAY_DIR=~/.claude-relay
+# Relay data directory (defaults to ~/.coparent-relay)
+# RELAY_DIR=~/.coparent-relay
 
 # --- OPTIONAL: Voice Transcription ---
 
