--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "setup": "bun run setup/install.ts",
     "test:telegram": "bun run setup/test-telegram.ts",
     "test:supabase": "bun run setup/test-supabase.ts",
+    "test:imessage": "bun run setup/test-imessage.ts",
     "test:voice": "bun run setup/test-voice.ts",
     "setup:launchd": "bun run setup/configure-launchd.ts",
     "setup:services": "bun run setup/configure-services.ts",
-    "setup:verify": "bun run setup/verify.ts"
+    "setup:verify": "bun run setup/verify.ts",
+    "ingest:decree": "bun run scripts/ingest-decree.ts",
+    "fetch:legal": "bun run scripts/fetch-utah-code.ts",
+    "briefing": "bun run src/morning-briefing.ts",
+    "compact": "bun run scripts/compact-exchanges.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
